argocd/platform/kubernetes-dashboard/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - dashboard.hyperion.homelab.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
